--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.udacity.project.pupularmovies">
+    package="com.udacity.project.popularmovies">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -11,7 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.activity.MainActivity">
+        <activity android:name="com.udacity.project.popularmovies.ui.activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -19,8 +19,13 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ui.activity.MovieDetailActivity"
-            android:parentActivityName=".ui.activity.MainActivity" />
+            android:name="com.udacity.project.popularmovies.ui.activity.MovieDetailActivity"
+            android:parentActivityName="com.udacity.project.popularmovies.ui.activity.MainActivity" />
+
+        <provider
+            android:name="com.udacity.project.popularmovies.data.MovieContentProvider"
+            android:authorities="com.udacity.project.popularmovies"
+            android:exported="false"/>
     </application>
 
 </manifest>
