--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,7 +31,11 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.6.1'
     implementation 'com.squareup.retrofit2:retrofit:2.3.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+
+    //Library that takes care of the heart animation on the movie detail screen.
+    //For more info, see https://github.com/jd-alexander/LikeButton.
     compile 'com.github.jd-alexander:LikeButton:0.2.3'
+
     implementation 'com.github.bumptech.glide:glide:4.6.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.6.1'
 }
